cambio de letras

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IPTV Premium - Servicios IPTV Profesionales</title>
+    <title>Astratech Systems</title>
     <link rel="stylesheet" href="css/style.css"> <!-- Enlace al archivo CSS -->
 </head>
 <body>
 
     <!-- Encabezado del sitio -->
     <header>
-        <h1>IPTV Premium</h1>
-        <p>Tu proveedor confiable de servicios IPTV</p>
+        <h1>Astratech Systems/h1>
+        <p>Soluciones iptv y catv</p>
     </header>
 
     <!-- Barra de navegación -->
@@ -23,8 +23,8 @@
 
     <!-- Sección de bienvenida -->
     <section id="inicio">
-        <h2>Bienvenidos a IPTV Premium</h2>
-        <p>Ofrecemos soluciones completas para la transmisión de canales vía IPTV en formato M3U8, asesoría técnica en la implementación de servidores, configuración de llaves IKS, y más.</p>
+        <h2>Bienvenidos a Astratech Systems</h2>
+        <p>Somos tu aliado en las telecomunicaciones.</p>
     </section>
 
     <!-- Sección de servicios -->
