--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Encabezado del sitio -->
     <header>
-        <h1>Astratech Systems/h1>
+        <h1>Astratech Sysyems</h1>
         <p>Soluciones iptv y catv</p>
     </header>
 
