--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <p>Contáctanos por WhatsApp o email:</p>
         <ul>
             <li>📞 WhatsApp: +123 456 789</li>
+            <a href="wa.me/573011382447">📞 Whatsapp </a>
             <li>📧 Email: contacto@iptvpremium.com</li>
         </ul>
     </section>
