--- a/index.html
+++ b/index.html
@@ -31,15 +31,19 @@
     <section id="servicios">
         <h2>Servicios</h2>
         <div class="servicios">
-            <div class="servicio">
+            <div class="m3u8">
                 <h3>Listas M3U8 Premium</h3>
                 <p>Accede a miles de canales en alta calidad, listas estables y actualizadas.</p>
             </div>
-            <div class="servicio">
+            <div class="asesoria">
                 <h3>Asesoría Técnica IPTV</h3>
                 <p>Montaje de servidores IPTV, optimización de streams y más.</p>
             </div>
-            <div class="servicio">
+            <div class="llavesiks">
+                <h3>Llaves IKS</h3>
+                <p>Configuración y soporte para IKS y decodificadores compatibles.</p>
+            </div>
+            <div class="licenciastra">
                 <h3>Llaves IKS</h3>
                 <p>Configuración y soporte para IKS y decodificadores compatibles.</p>
             </div>
@@ -52,7 +56,6 @@
         <p>Contáctanos por WhatsApp o email:</p>
         <ul>
             <li>📞 WhatsApp: +123 456 789</li>
-            <a href="wa.me/573011382447">📞 Whatsapp </a>
             <li>📧 Email: contacto@iptvpremium.com</li>
         </ul>
     </section>
