--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <p>Configuración y soporte para IKS y decodificadores compatibles.</p>
             </div>
             <div class="licenciastra">
-                <h3>Llaves IKS</h3>
-                <p>Configuración y soporte para IKS y decodificadores compatibles.</p>
+                <h3>Licencias Astras</h3>
+                <p>asegurando la estabilidad del sistema </p>
             </div>
         </div>
     </section>
