--- a/index.html
+++ b/index.html
@@ -4,68 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astratech Systems</title>
-    <link rel="stylesheet" href="css/style.css"> <!-- Enlace al archivo CSS -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-    <!-- Encabezado del sitio -->
+    <!-- ENCABEZADO -->
     <header>
-        <h1>Astratech Sysyems</h1>
-        <p>Soluciones iptv y catv</p>
+        <h1>Astratech Systems</h1>
+        <p>Soluciones IPTV y CATV a tu medida</p>
     </header>
 
-    <!-- Barra de navegación -->
+    <!-- NAVEGACIÓN -->
     <nav>
         <a href="#inicio">Inicio</a>
         <a href="#servicios">Servicios</a>
+        <a href="#nosotros">Nosotros</a>
         <a href="#contacto">Contacto</a>
     </nav>
 
-    <!-- Sección de bienvenida -->
+    <!-- INICIO -->
     <section id="inicio">
-        <h2>Bienvenidos a Astratech Systems</h2>
-        <p>Somos tu aliado en las telecomunicaciones.</p>
+        <h2>Bienvenidos</h2>
+        <p>Ofrecemos tecnología de vanguardia para distribución de contenido digital. IPTV, servidores, licencias, soporte técnico y más.</p>
     </section>
 
-    <!-- Sección de servicios -->
+    <!-- SERVICIOS -->
     <section id="servicios">
-        <h2>Servicios</h2>
+        <h2>Nuestros Servicios</h2>
         <div class="servicios">
-            <div class="m3u8">
+            <div class="servicio">
                 <h3>Listas M3U8 Premium</h3>
-                <p>Accede a miles de canales en alta calidad, listas estables y actualizadas.</p>
+                <p>Acceso a canales en HD y FHD, listas estables y seguras.</p>
             </div>
-            <div class="asesoria">
-                <h3>Asesoría Técnica IPTV</h3>
-                <p>Montaje de servidores IPTV, optimización de streams y más.</p>
+            <div class="servicio">
+                <h3>Montaje de Servidores</h3>
+                <p>Configuramos tu servidor IPTV desde cero, seguro y escalable.</p>
             </div>
-            <div class="llavesiks">
+            <div class="servicio">
                 <h3>Llaves IKS</h3>
-                <p>Configuración y soporte para IKS y decodificadores compatibles.</p>
+                <p>Soporte y configuración de llaves para decodificadores IKS.</p>
             </div>
-            <div class="licenciastra">
-                <h3>Licencias Astras</h3>
-                <p>asegurando la estabilidad del sistema </p>
+            <div class="servicio">
+                <h3>Licencias y Middleware</h3>
+                <p>Gestión de Stalker, Xtream UI, Ministra y otros sistemas.</p>
             </div>
         </div>
     </section>
 
-    <!-- Sección de contacto -->
+    <!-- NOSOTROS -->
+    <section id="nosotros">
+        <h2>¿Quiénes Somos?</h2>
+        <p>Un equipo apasionado por la tecnología y las telecomunicaciones, con más de 5 años brindando soluciones confiables y personalizadas.</p>
+    </section>
+
+    <!-- CONTACTO -->
     <section id="contacto">
         <h2>Contacto</h2>
-        <p>Contáctanos por WhatsApp o email:</p>
+        <p>¿Quieres empezar? Escríbenos por WhatsApp o correo electrónico:</p>
         <ul>
-            <li>📞 WhatsApp: +123 456 789</li>
-            <li>📧 Email: contacto@iptvpremium.com</li>
+            <li>📱 WhatsApp: <a href="https://wa.me/123456789" target="_blank">+123 456 789</a></li>
+            <li>📧 Email: <a href="mailto:contacto@astratech.com">contacto@astratech.com</a></li>
         </ul>
     </section>
 
-    <!-- Pie de página -->
+    <!-- PIE DE PÁGINA -->
     <footer>
-        <p>&copy; 2025 IPTV Premium. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Astratech Systems. Todos los derechos reservados.</p>
     </footer>
 
-    <!-- Enlace al archivo JS -->
     <script src="js/script.js"></script>
 </body>
 </html>
