--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h2>Contacto</h2>
         <p>¿Quieres empezar? Escríbenos por WhatsApp o correo electrónico:</p>
         <ul>
-            <li>📱 WhatsApp: <a href="https://wa.me/3011382447" target="_blank">+123 456 789</a></li>
+            <li>📱 WhatsApp: <a href="https://wa.me/3011382447" target="_blank">3011382447</a></li>
             <li>📧 Email: <a href="support@astratech.com">contacto@astratech.com</a></li>
         </ul>
     </section>
