--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
     <!-- ENCABEZADO -->
     <header>
+        <img src="img/image.png" alt="Logo de Astratech Systems" class="logo">
         <h1>Astratech Systems</h1>
         <p>Soluciones IPTV y CATV a tu medida</p>
     </header>
+    
 
     <!-- NAVEGACIÓN -->
     <nav>
