--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <section id="servicios">
         <h2>Nuestros Servicios</h2>
         <div class="servicios">
-            <div class="servicio">
+            <a href="html/canales.html" class="servicio">
                 <h3>Listas M3U8 Premium</h3>
                 <p>Acceso a canales en HD y FHD, listas estables y seguras.</p>
-            </div>
+            </a>
             <div class="servicio">
                 <h3>Montaje de Servidores</h3>
                 <p>Configuramos tu servidor IPTV desde cero, seguro y escalable.</p>
