--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="servicios">
         <h2>Nuestros Servicios</h2>
         <div class="servicios">
-            <a href="html/canales.html" class="servicio">
+            <a  href="html/canales.html" class="servicio" target="_parent">
                 <h3>Listas M3U8 Premium</h3>
                 <p>Acceso a canales en HD y FHD, listas estables y seguras.</p>
             </a>
