--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <h1>Astratech Systems</h1>
         <p>Soluciones IPTV y CATV a tu medida</p>
     </header>
-    
 
     <!-- NAVEGACIÓN -->
     <nav>
@@ -33,22 +32,22 @@
     <section id="servicios">
         <h2>Nuestros Servicios</h2>
         <div class="servicios">
-            <a  href="html/canales.html" class="servicio" target="_parent">
+            <a href="html/canales.html" class="servicio" target="_parent">
                 <h3>Listas M3U8 Premium</h3>
                 <p>Acceso a canales en HD y FHD, listas estables y seguras.</p>
             </a>
-            <div class="servicio">
+            <a href="html/servidores.html" class="servicio" target="_parent">
                 <h3>Montaje de Servidores</h3>
                 <p>Configuramos tu servidor IPTV desde cero, seguro y escalable.</p>
-            </div>
-            <div class="servicio">
+            </a>
+            <a href="html/llaves.html" class="servicio" target="_parent">
                 <h3>Llaves IKS</h3>
                 <p>Soporte y configuración de llaves para decodificadores IKS.</p>
-            </div>
-            <div class="servicio">
+            </a>
+            <a href="html/middleware.html" class="servicio" target="_parent">
                 <h3>Licencias y Middleware</h3>
                 <p>Gestión de Stalker, Xtream UI, Ministra y otros sistemas.</p>
-            </div>
+            </a>
         </div>
     </section>
 
