--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astratech Systems</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- Fuente elegante tipo serif -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -63,7 +65,7 @@
         <p>¿Quieres empezar? Escríbenos por WhatsApp o correo electrónico:</p>
         <ul>
             <li>📱 WhatsApp: <a href="https://wa.me/3011382447" target="_blank">3011382447</a></li>
-            <li>📧 Email: <a href="support@astratech.com">contacto@astratech.com</a></li>
+            <li>📧 Email: <a href="mailto:contacto@astratech.com">contacto@astratech.com</a></li>
         </ul>
     </section>
 
