--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
                 <h3>Licencias y Middleware</h3>
                 <p>Gestión de Stalker, Xtream UI, Ministra y otros sistemas.</p>
             </a>
+            <a href="html/middleware.html" class="servicio" target="_parent">
+                <h3>Soporte Tecnico</h3>
+                <p>Somos especialistas en servicios de television e infrastrutra FTTH</p>
+            </a>
         </div>
     </section>
 
