--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -10,15 +9,10 @@
 </head>
 <body>
 
-    <!-- HEADER CON LOGO -->
+    <!-- ENCABEZADO -->
     <header>
-        <div class="contenedor-header">
-            <img src="img/logo.png" alt="Logo de Astratech" class="logo">
-            <div class="info-header">
-                <h1>Astratech Systems</h1>
-                <p>Soluciones IPTV y CATV a tu medida</p>
-            </div>
-        </div>
+        <h1>Astratech Systems</h1>
+        <p>Soluciones IPTV y CATV a tu medida</p>
     </header>
 
     <!-- NAVEGACIÓN -->
@@ -29,59 +23,60 @@
         <a href="#contacto">Contacto</a>
     </nav>
 
-    <!-- BIENVENIDA -->
+    <!-- INICIO -->
     <section id="inicio">
         <h2>Bienvenidos</h2>
-        <p>Ofrecemos tecnología de vanguardia para distribución de contenido digital: IPTV, servidores, licencias, soporte técnico y más.</p>
+        <p>Ofrecemos tecnología de vanguardia para distribución de contenido digital. IPTV, servidores, licencias, soporte técnico y más.</p>
     </section>
 
-    <!-- SERVICIOS COMO TARJETAS -->
+    <!-- SERVICIOS -->
     <section id="servicios">
         <h2>Nuestros Servicios</h2>
-        <div class="tarjetas-servicio">
-            <div class="tarjeta">
+        <div class="servicios">
+            <a href="html/canales.html" class="servicio" target="_parent">
                 <h3>Listas M3U8 Premium</h3>
                 <p>Acceso a canales en HD y FHD, listas estables y seguras.</p>
-            </div>
-            <div class="tarjeta">
+            </a>
+            <a href="html/servidores.html" class="servicio" target="_parent">
                 <h3>Montaje de Servidores</h3>
                 <p>Configuramos tu servidor IPTV desde cero, seguro y escalable.</p>
-            </div>
-            <div class="tarjeta">
+            </a>
+            <a href="html/llaves.html" class="servicio" target="_parent">
                 <h3>Llaves IKS</h3>
                 <p>Soporte y configuración de llaves para decodificadores IKS.</p>
-            </div>
-            <div class="tarjeta">
+            </a>
+            <a href="html/middleware.html" class="servicio" target="_parent">
                 <h3>Licencias y Middleware</h3>
-                <p>Gestión de Stalker, Xtream UI, Ministra y más.</p>
-            </div>
-            <div class="tarjeta">
+                <p>Gestión de Stalker, Xtream UI, Ministra y otros sistemas.</p>
+            </a>
+            <a href="html/middleware.html" class="servicio" target="_parent">
                 <h3>Soporte Técnico</h3>
-                <p>Especialistas en servicios de televisión e infraestructura FTTH.</p>
-            </div>
+                <p>Somos especialistas en servicios de televisión e infraestructura FTTH.</p>
+            </a>
         </div>
     </section>
 
     <!-- NOSOTROS -->
     <section id="nosotros">
         <h2>¿Quiénes Somos?</h2>
-        <p>Un equipo apasionado por la tecnología con más de 5 años brindando soluciones confiables y personalizadas.</p>
+        <p>Un equipo apasionado por la tecnología y las telecomunicaciones, con más de 5 años brindando soluciones confiables y personalizadas.</p>
     </section>
 
     <!-- CONTACTO -->
     <section id="contacto">
         <h2>Contacto</h2>
-        <p>¿Quieres empezar? Escríbenos:</p>
+        <p>¿Quieres empezar? Escríbenos por WhatsApp o correo electrónico:</p>
         <ul>
             <li>📱 WhatsApp: <a href="https://wa.me/3011382447" target="_blank">3011382447</a></li>
             <li>📧 Email: <a href="mailto:contacto@astratech.com">contacto@astratech.com</a></li>
         </ul>
     </section>
 
-    <!-- FOOTER -->
+    <!-- PIE DE PÁGINA -->
     <footer>
         <p>&copy; 2025 Astratech Systems. Todos los derechos reservados.</p>
     </footer>
 
+    <script src="js/script.js"></script>
 </body>
 </html>
