--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astratech Systems</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- Fuente elegante tipo serif -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -50,8 +51,8 @@
                 <p>Gestión de Stalker, Xtream UI, Ministra y otros sistemas.</p>
             </a>
             <a href="html/middleware.html" class="servicio" target="_parent">
-                <h3>Soporte Técnico</h3>
-                <p>Somos especialistas en servicios de televisión e infraestructura FTTH.</p>
+                <h3>Soporte Tecnico</h3>
+                <p>Somos especialistas en servicios de television e infrastrutra </p>
             </a>
         </div>
     </section>
