add letra llamativas

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- ENCABEZADO -->
     <header>
         <h1>Astratech Systems</h1>
-        <p>Soluciones IPTV y CATV a tu medida</p>
+        <p>Transforma cada pantalla en una experiencia única de entretenimiento</p>
     </header>
 
     <!-- NAVEGACIÓN -->
@@ -35,8 +35,8 @@
         <h2>Nuestros Servicios</h2>
         <div class="servicios">
             <a href="html/canales.html" class="servicio" target="_parent">
-                <h3>Listas M3U8 Premium</h3>
-                <p>Acceso a canales en HD y FHD, listas estables y seguras.</p>
+                <h3>Flujos de canales</h3>
+                <p>Acceso a canales en HD y SD, listas estables y seguras.</p>
             </a>
             <a href="html/servidores.html" class="servicio" target="_parent">
                 <h3>Montaje de Servidores</h3>
@@ -47,12 +47,12 @@
                 <p>Soporte y configuración de llaves para decodificadores IKS.</p>
             </a>
             <a href="html/middleware.html" class="servicio" target="_parent">
-                <h3>Licencias y Middleware</h3>
-                <p>Gestión de Stalker, Xtream UI, Ministra y otros sistemas.</p>
+                <h3>Licencias</h3>
+                <p>Licencias Astra Cesbo, estabilidad y profesionalismo en TV digital.</p>
             </a>
             <a href="html/middleware.html" class="servicio" target="_parent">
                 <h3>Soporte Tecnico</h3>
-                <p>Somos especialistas en servicios de television e infrastrutra </p>
+                <p>Atención técnica profesional cuando más lo necesitas.</p>
             </a>
         </div>
     </section>
