--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- NOSOTROS -->
     <section id="nosotros">
         <h2>¿Quiénes Somos?</h2>
-        <p>"Con una fuerte pasión por la tecnología y las telecomunicaciones, brindamos soluciones personalizadas y confiables que se adaptan a los desafíos de cada proyecto, respaldados por años de experiencia..</p>
+        <p>Con una fuerte pasión por la tecnología y las telecomunicaciones, brindamos soluciones personalizadas y confiables que se adaptan a los desafíos de cada proyecto, respaldados por años de experiencia..</p>
     </section>
 
     <!-- CONTACTO -->
