--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
     <!-- INICIO -->
     <section id="inicio">
         <h2>Bienvenidos</h2>
-    </section>
-        <p>Somos un equipo especializado en ofrecer servicios de configuración, asesoría y soporte en IPTV, servidores y licencias, para que la experiencia de tus clientes con el contenido digital sea la más estable y de calidad.
-
-        </p>
+        <p>Ofrecemos tecnología de vanguardia para distribución de contenido digital. IPTV, servidores, licencias, soporte técnico y más.</p>
     </section>
 
     <!-- SERVICIOS -->
