--- a/html/canales.html
+++ b/html/canales.html
@@ -52,7 +52,7 @@
                     </div>
                     <div class="canal-info">
                         <h3>AXN</h3>
-                        <p class="calidad"><span class="fhd">FHD</span> • Internacional</p>
+                        <p class="calidad"><span class="hd">HD</span> • Internacional</p>
                     </div>
                 </div>
                 
@@ -135,6 +135,16 @@
                 </div>
                 
                 <!-- TyC Sports -->
+                <div class="canal-card" data-categoria="deportes" data-nombre="tyc sports">
+                    <div class="canal-logo">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/TyC_Sports_2020.png/800px-TyC_Sports_2020.png" alt="TyC Sports" loading="lazy">
+                    </div>
+                    <div class="canal-info">
+                        <h3>TyC Sports</h3>
+                        <p class="calidad"><span class="hd">HD</span> • Argentina</p>
+                    </div>
+                </div>
+
                 <div class="canal-card" data-categoria="deportes" data-nombre="tyc sports">
                     <div class="canal-logo">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/TyC_Sports_2020.png/800px-TyC_Sports_2020.png" alt="TyC Sports" loading="lazy">
