--- a/html/canales.html
+++ b/html/canales.html
@@ -88,7 +88,7 @@
                 <!-- Cinemax -->
                 <div class="canal-card" data-categoria="peliculas" data-nombre="cinemax">
                     <div class="canal-logo">
-                        <img src="/img/logos/Cinemax_new.png" alt="Cinemax" loading="lazy">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Cinemax_%28Yellow%29.svg/263px-Cinemax_%28Yellow%29.svg.png" alt="Cinemax" loading="lazy">
                     </div>
                     <div class="canal-info">
                         <h3>Cinemax</h3>
