--- a/html/canales.html
+++ b/html/canales.html
@@ -99,7 +99,7 @@
                 <!-- Space -->
                 <div class="canal-card" data-categoria="peliculas" data-nombre="space">
                     <div class="canal-logo">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Space_2017.png/800px-Space_2017.png" alt="Space" loading="lazy">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/SpaceLogo.svg/330px-SpaceLogo.svg.png" alt="Space" loading="lazy">
                     </div>
                     <div class="canal-info">
                         <h3>Space</h3>
