--- a/html/canales.html
+++ b/html/canales.html
@@ -38,7 +38,7 @@
                 <!-- Canal 5 -->
                 <div class="canal-card" data-categoria="entretenimiento" data-nombre="canal 5">
                     <div class="canal-logo">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Canal_5_logo_2016.svg/1200px-Canal_5_logo_2016.svg.png" alt="Canal 5" loading="lazy">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1d/Canal_5_Mexico_logo_2014.svg/250px-Canal_5_Mexico_logo_2014.svg.png" alt="Canal 5" loading="lazy">
                     </div>
                     <div class="canal-info">
                         <h3>Canal 5</h3>
@@ -49,7 +49,7 @@
                 <!-- AXN -->
                 <div class="canal-card" data-categoria="entretenimiento" data-nombre="axn">
                     <div class="canal-logo">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/AXN_logo_%282015%29.svg/1200px-AXN_logo_%282015%29.svg.png" alt="AXN" loading="lazy">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/AXN_logo_%282015%29.svg/330px-AXN_logo_%282015%29.svg.png" alt="AXN" loading="lazy">
                     </div>
                     <div class="canal-info">
                         <h3>AXN</h3>
@@ -60,7 +60,7 @@
                 <!-- Warner Channel -->
                 <div class="canal-card" data-categoria="entretenimiento" data-nombre="warner channel">
                     <div class="canal-logo">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/Warner_Channel_logo.svg/1200px-Warner_Channel_logo.svg.png" alt="Warner Channel" loading="lazy">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Warner2018LA.png/250px-Warner2018LA.png" alt="Warner Channel" loading="lazy">
                     </div>
                     <div class="canal-info">
                         <h3>Warner Channel</h3>
