add logo canales deportes

--- a/html/canales.html
+++ b/html/canales.html
@@ -127,7 +127,7 @@
                 <!-- Fox Sports -->
                 <div class="canal-card" data-categoria="deportes" data-nombre="fox sports">
                     <div class="canal-logo">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Fox_Sports_logo.svg/1200px-Fox_Sports_logo.svg.png" alt="Fox Sports" loading="lazy">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/FOX_Sports_logo.svg/225px-FOX_Sports_logo.svg.png" alt="Fox Sports" loading="lazy">
                     </div>
                     <div class="canal-info">
                         <h3>Fox Sports</h3>
@@ -138,7 +138,7 @@
                 <!-- TyC Sports -->
                 <div class="canal-card" data-categoria="deportes" data-nombre="tyc sports">
                     <div class="canal-logo">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/TyC_Sports_2020.png/800px-TyC_Sports_2020.png" alt="TyC Sports" loading="lazy">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/54/TyC_Sports_logo.svg/500px-TyC_Sports_logo.svg.png" alt="TyC Sports" loading="lazy">
                     </div>
                     <div class="canal-info">
                         <h3>TyC Sports</h3>
@@ -146,15 +146,9 @@
                     </div>
                 </div>
 
-                <div class="canal-card" data-categoria="deportes" data-nombre="tyc sports">
-                    <div class="canal-logo">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/TyC_Sports_2020.png/800px-TyC_Sports_2020.png" alt="TyC Sports" loading="lazy">
-                    </div>
-                    <div class="canal-info">
-                        <h3>TyC Sports</h3>
-                        <p class="calidad"><span class="hd">HD</span> • Argentina</p>
-                    </div>
-                </div>
+                
+
+                
             </div>
         </div>
 
