--- a/html/canales.html
+++ b/html/canales.html
@@ -148,7 +148,7 @@
 
                 
 
-                
+
             </div>
         </div>
 
@@ -171,7 +171,7 @@
                 <!-- BBC World -->
                 <div class="canal-card" data-categoria="noticias" data-nombre="bbc world">
                     <div class="canal-logo">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/BBC_World_News_2022_%28Boxed%29.svg/1200px-BBC_World_News_2022_%28Boxed%29.svg.png" alt="BBC World" loading="lazy">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/BBC_News_2022_%28Alt%29.svg/255px-BBC_News_2022_%28Alt%29.svg.png" alt="BBC World" loading="lazy">
                     </div>
                     <div class="canal-info">
                         <h3>BBC World</h3>
@@ -182,7 +182,7 @@
                 <!-- TeleSUR -->
                 <div class="canal-card" data-categoria="noticias" data-nombre="telesur">
                     <div class="canal-logo">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/TeleSUR_Logo.svg/1200px-TeleSUR_Logo.svg.png" alt="TeleSUR" loading="lazy">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/TeleSUR.jpg/390px-TeleSUR.jpg" alt="TeleSUR" loading="lazy">
                     </div>
                     <div class="canal-info">
                         <h3>TeleSUR</h3>
