--- a/html/canales.html
+++ b/html/canales.html
@@ -200,7 +200,7 @@
                 <!-- Disney Channel -->
                 <div class="canal-card" data-categoria="infantiles" data-nombre="disney channel">
                     <div class="canal-logo">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Disney_Channel_logo.svg/1200px-Disney_Channel_logo.svg.png" alt="Disney Channel" loading="lazy">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Disney_Channel_text_logo_%282024%29.svg/330px-Disney_Channel_text_logo_%282024%29.svg.png" alt="Disney Channel" loading="lazy">
                     </div>
                     <div class="canal-info">
                         <h3>Disney Channel</h3>
@@ -211,7 +211,7 @@
                 <!-- Nickelodeon -->
                 <div class="canal-card" data-categoria="infantiles" data-nombre="nickelodeon">
                     <div class="canal-logo">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Nickelodeon_2009_logo.svg/1200px-Nickelodeon_2009_logo.svg.png" alt="Nickelodeon" loading="lazy">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/Nickelodeon_2023_logo_%28outline%29.svg/500px-Nickelodeon_2023_logo_%28outline%29.svg.png" alt="Nickelodeon" loading="lazy">
                     </div>
                     <div class="canal-info">
                         <h3>Nickelodeon</h3>
