--- a/html/servidores.html
+++ b/html/servidores.html
@@ -12,8 +12,8 @@
 
     <header class="servidores-header">
         <div class="container">
-            <h1>Servidores Especializados</h1>
-            <p>Soluciones a medida para sistemas IPTV/CATV</p>
+            <h1>Servidores recomendados</h1>
+            <p> para un mejor rendimiento y estabilidad en el servicio</p>
             <a href="../index.html" class="btn-volver"><i class="fas fa-arrow-left"></i> Volver al inicio</a>
         </div>
     </header>
@@ -30,7 +30,7 @@
 
         <!-- Servidores LNB -->
         <div class="categoria-servidor" id="lnb">
-            <h2><i class="fas fa-satellite-dish"></i> Servidores LNB</h2>
+            <h2><i class="fas fa-server"></i> Servidores</h2>
             <p class="descripcion-categoria">Sistemas optimizados para recepción satelital con LNB</p>
             
             <div class="grid-servidores">
