--- a/html/llaves.html
+++ b/html/llaves.html
@@ -264,6 +264,10 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Astratech Systems. Todos los derechos reservados.</p>
+            <div class="footer-contacto">
+                <a href="https://wa.me/3011382447" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+                <a href="astratechsystems@gmail.com"><i class="fas fa-envelope"></i> Email</a>
+            </div>
         </div>
     </footer>
 
