--- a/html/llaves.html
+++ b/html/llaves.html
@@ -239,26 +239,26 @@
         </div>
 
         <!-- SES-6 -->
-        <div class="satelite-section" id="ses6">
-            <h2><i class="fas fa-satellite"></i> SES-6 (40.5°W)</h2>
-            <p class="descripcion-satelite">Paquetes disponibles para el satélite SES-6</p>
+        <!-- <div class="satelite-section" id="ses6"> -->
+            <!-- <h2><i class="fas fa-satellite"></i> SES-6 (40.5°W)</h2> -->
+            <!-- <p class="descripcion-satelite">Paquetes disponibles para el satélite SES-6</p> -->
             
-            <div class="grid-paquetes">
+            <!-- <div class="grid-paquetes"> -->
                 <!-- Paquetes para SES-6 (estructura similar) -->
                 <!-- ... -->
-            </div>
-        </div>
+            <!-- </div> -->
+        <!-- </div> -->
 
         <!-- Intelsat 21 -->
-        <div class="satelite-section" id="intelsat">
-            <h2><i class="fas fa-satellite"></i> Intelsat 21 (58°W)</h2>
-            <p class="descripcion-satelite">Paquetes disponibles para el satélite Intelsat 21</p>
+        <!-- <div class="satelite-section" id="intelsat"> -->
+            <!-- <h2><i class="fas fa-satellite"></i> Intelsat 21 (58°W)</h2> -->
+            <!-- <p class="descripcion-satelite">Paquetes disponibles para el satélite Intelsat 21</p> -->
             
-            <div class="grid-paquetes">
+            <!-- <div class="grid-paquetes"> -->
                 <!-- Paquetes para Intelsat 21 (estructura similar) -->
                 <!-- ... -->
-            </div>
-        </div>
+            <!-- </div> -->
+        <!-- </div>  -->
     </section>
 
     <footer>
