--- a/html/llaves.html
+++ b/html/llaves.html
@@ -25,8 +25,8 @@
                 <button class="satelite-btn active" onclick="filtrarPaquetes('todos')">Todos</button>
                 <button class="satelite-btn" onclick="filtrarPaquetes('amazonas')">Amazonas 2 (61°W)</button>
                 <button class="satelite-btn" onclick="filtrarPaquetes('starone')">Star One (71°W)</button>
-                <button class="satelite-btn" onclick="filtrarPaquetes('ses6')">SES-6 (40.5°W)</button>
-                <button class="satelite-btn" onclick="filtrarPaquetes('intelsat')">Intelsat 21 (58°W)</button>
+                <!-- <button class="satelite-btn" onclick="filtrarPaquetes('ses6')">SES-6 (40.5°W)</button> -->
+                <!-- <button class="satelite-btn" onclick="filtrarPaquetes('intelsat')">Intelsat 21 (58°W)</button> -->
             </div>
         </div>
 
