--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                 <h3>Llaves IKS</h3>
                 <p>Soporte y configuración de llaves para decodificadores IKS.</p>
             </a>
-            <a href="html/middleware.html" class="servicio" target="_parent">
+            <a href="html/licencia.html" class="servicio" target="_parent">
                 <h3>Licencias</h3>
                 <p>Licencias Astra Cesbo, estabilidad y profesionalismo en TV digital.</p>
             </a>
-            <a href="html/middleware.html" class="servicio" target="_parent">
+            <a href="html/soporte.html" class="servicio" target="_parent">
                 <h3>Soporte Tecnico</h3>
                 <p>Atención técnica profesional cuando más lo necesitas.</p>
             </a>
