--- a/html/licencia.html
+++ b/html/licencia.html
@@ -29,10 +29,10 @@
         <div class="filtros-licencias">
             <div class="filtro-tipos">
                 <button class="tipo-btn active" onclick="filtrarLicencias('todos')">Todas</button>
-                <button class="tipo-btn" onclick="filtrarLicencias('panel')">Paneles</button>
-                <button class="tipo-btn" onclick="filtrarLicencias('middleware')">Middleware</button>
-                <button class="tipo-btn" onclick="filtrarLicencias('playout')">Playout</button>
-                <button class="tipo-btn" onclick="filtrarLicencias('otros')">Otros</button>
+                <button class="tipo-btn" onclick="filtrarLicencias('panel')">Astra Cesbo</button>
+                <!-- <button class="tipo-btn" onclick="filtrarLicencias('middleware')">Middleware</button> -->
+                <!-- <button class="tipo-btn" onclick="filtrarLicencias('playout')">Playout</button> -->
+                <!-- <button class="tipo-btn" onclick="filtrarLicencias('otros')">Otros</button> -->
             </div>
         </div>
 
