--- a/html/licencia.html
+++ b/html/licencia.html
@@ -28,7 +28,7 @@
         <!-- Filtros por tipo de licencia -->
         <div class="filtros-licencias">
             <div class="filtro-tipos">
-                <button class="tipo-btn active" onclick="filtrarLicencias('todos')">Todas</button>
+                <!-- <button class="tipo-btn active" onclick="filtrarLicencias('todos')">Todas</button> -->
                 <button class="tipo-btn" onclick="filtrarLicencias('panel')">Astra Cesbo</button>
                 <!-- <button class="tipo-btn" onclick="filtrarLicencias('middleware')">Middleware</button> -->
                 <!-- <button class="tipo-btn" onclick="filtrarLicencias('playout')">Playout</button> -->
