--- a/html/licencia.html
+++ b/html/licencia.html
@@ -28,8 +28,8 @@
         <!-- Filtros por tipo de licencia -->
         <div class="filtros-licencias">
             <div class="filtro-tipos">
-                <!-- <button class="tipo-btn active" onclick="filtrarLicencias('todos')">Todas</button> -->
-                <button class="tipo-btn" onclick="filtrarLicencias('panel')">Astra Cesbo</button>
+                <button class="tipo-btn active" onclick="filtrarLicencias('todos')">Todas</button>
+                <button class="tipo-btn" onclick="filtrarLicencias('panel')">Paneles</button>
                 <!-- <button class="tipo-btn" onclick="filtrarLicencias('middleware')">Middleware</button> -->
                 <!-- <button class="tipo-btn" onclick="filtrarLicencias('playout')">Playout</button> -->
                 <!-- <button class="tipo-btn" onclick="filtrarLicencias('otros')">Otros</button> -->
@@ -74,7 +74,7 @@
             </div>
 
             <!-- Licencia 2 - CESBO -->
-            <div class="licencia-card" data-tipo="middleware">
+            <!-- <div class="licencia-card" data-tipo="middleware">
                 <div class="licencia-imagen">
                     <img src="https://via.placeholder.com/400x200?text=Cesbo+Middleware" alt="Cesbo Middleware" loading="lazy">
                     <div class="licencia-badge">Middleware</div>
@@ -106,7 +106,7 @@
                     </div>
                     <button class="btn-licencia">Consultar</button>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Plantilla para agregar más licencias -->
             <!-- 
