add email y whatsapp

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <h2>Contacto</h2>
         <p>¿Quieres empezar? Escríbenos por WhatsApp o correo electrónico:</p>
         <ul>
-            <li> WhatsApp: <a href="https://wa.me/3011382447" target="_blank">3011382447</a></li>
-            <li>Email: <a href="mailto:contacto@astratech.com">contacto@astratech.com</a></li>
+            <a href="https://wa.me/3011382447" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+            <a href="astratechsystems@gmail.com"><i class="fas fa-envelope"></i> Email</a>
         </ul>
     </section>
 
