--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h2>Contacto</h2>
         <p>¿Quieres empezar? Escríbenos por WhatsApp o correo electrónico:</p>
         <ul>
-            <li> WhatsApp: <a href="https://wa.me/3011382447" target="_blank">3011382447</a></li>
+            <li> WhatsApp: <a href="https://wa.me/3011382447" target="_blank" class="fab fa-whatsapp">3011382447</a></li>
             <li>Email: <a href="mailto:contacto@astratech.com">contacto@astratech.com</a></li>
         </ul>
     </section>
