add secion contactos

--- a/index.html
+++ b/index.html
@@ -65,12 +65,20 @@
 
     <!-- CONTACTO -->
     <section id="contacto">
-        <h2>Contacto</h2>
+        <h2><i class="fas fa-envelope"></i> Contacto</h2>
         <p>¿Quieres empezar? Escríbenos por WhatsApp o correo electrónico:</p>
-        <ul>
-            <a href="https://wa.me/3011382447" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-            
-        </ul>
+        <div class="contacto-info">
+            <div class="contacto-item">
+                <a href="https://wa.me/3011382447" target="_blank" class="btn-whatsapp">
+                    <i class="fab fa-whatsapp"></i> WhatsApp: 3011382447
+                </a>
+            </div>
+            <div class="contacto-item">
+                <a href="mailto:contacto@astratech.com" class="btn-email">
+                    <i class="fas fa-envelope"></i> Email: contacto@astratech.com
+                </a>
+            </div>
+        </div>
     </section>
 
     <!-- PIE DE PÁGINA -->
