--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 
     <!-- CONTACTO -->
     <section id="contacto">
-        <h2><i class="fas fa-envelope"></i> Contactos</h2>
+        <h2><i class="fas fa-envelope"></i> Contacto</h2>
         <p>¿Quieres empezar? Escríbenos por WhatsApp o correo electrónico:</p>
         <div class="contacto-info">
             <div class="contacto-item">
                 <a href="https://wa.me/3011382447" target="_blank" class="btn-whatsapp">
-                    <i class="fab fa-whatsapp"></i> WhatsApp
+                    <i class="fab fa-whatsapp"></i> WhatsApp: 3011382447
                 </a>
             </div>
             <div class="contacto-item">
