--- a/html/licencia.html
+++ b/html/licencia.html
@@ -41,7 +41,7 @@
             <!-- Licencia 1 - Astra -->
             <div class="licencia-card" data-tipo="panel">
                 <div class="licencia-imagen">
-                    <img src="https://via.placeholder.com/400x200?text=Astra+Panel" alt="Astra Panel" loading="lazy">
+                    <img src="https://cdn.cesbo.com/logo.svg" alt="Astra Panel" loading="lazy">
                     <div class="licencia-badge">Panel</div>
                 </div>
                 <div class="licencia-info">
